@@ -1,5 +1,10 @@
 2001-09-21  Tambet Ingo  <tambet@ximian.com>
 
+	* x.pl.in (x_probe_collect): Use xst_process_result_collect.
+
+	* util.pl.in (xst_process_result_collect): Implemented to hide
+	implementation details.
+
 	* x.pl.in (x_probe_scan): Return array.
 
 	* util.pl.in (xst_process_list_check_ready): Don't force second
